--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>情報Ⅰ クイズアプリ - 超強化版</title>
+  <title>情報Ⅰ 定着確認まとめ made by 岡本 with AI</title>
   <style>
     * {
       margin: 0;
