--- a/index.html
+++ b/index.html
@@ -697,8 +697,8 @@
   <div class="container">
     <div class="header">
       <button class="dark-mode-toggle" onclick="toggleDarkMode()" title="ダークモード切替">🌙</button>
-      <h1>📚 情報Ⅰ クイズアプリ</h1>
-      <p>テスト対策を効率的に！全92問収録 - 超強化版</p>
+      <h1>📚 情報Ⅰ 定着確認まとめ(全92問収録)</h1>
+      <p>made by okamoto and AI</p>
     </div>
     
     <div class="main-card">
